<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guidelineProfileH30"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblAvatar"
        android:layout_width="@dimen/fit"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imgAvatar"
        android:background="@color/avatar_label_background"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/lblName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAvatar" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="@dimen/fit"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/lblEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="@dimen/fit"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/txtPhonenumber"
        app:layout_constraintEnd_toStartOf="@+id/guidelineProfileV50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="@dimen/iconSize"
        android:layout_height="@dimen/iconSize"
        android:layout_marginStart="@dimen/margin"
        android:src="@drawable/ic_email_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        app:layout_constraintStart_toEndOf="@+id/txtEmail"
        app:layout_constraintTop_toTopOf="@+id/txtEmail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineProfileV50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guidelineHalf" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/lblPhone"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtPhonenumber"
        android:layout_width="@dimen/fit"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:hint="@string/hintPhone"
        android:inputType="phone"
        android:nextFocusDown="@+id/txtAddress"
        app:layout_constraintEnd_toStartOf="@+id/imgPhonenumber"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

    <ImageView
        android:id="@+id/imgPhonenumber"
        android:layout_width="@dimen/iconSize"
        android:layout_height="@dimen/iconSize"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:src="@drawable/ic_call_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPhonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPhonenumber" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/lblAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="@dimen/fit"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:hint="@string/hintAddress"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/imgAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddress" />

    <ImageView
        android:id="@+id/imgAddress"
        android:layout_width="@dimen/iconSize"
        android:layout_height="@dimen/iconSize"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:src="@drawable/ic_map_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAddress" />

    <TextView
        android:id="@+id/lblWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/lblWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtWeb"
        android:layout_width="@dimen/fit"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:hint="@string/hintWeb"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/imgWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWeb" />

    <ImageView
        android:id="@+id/imgWeb"
        android:layout_width="@dimen/iconSize"
        android:layout_height="@dimen/iconSize"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:src="@drawable/ic_web_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtWeb" />

    <TextView
        android:id="@+id/lblRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/lblRequired"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeb" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineProfileH30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/guideline30" />


</androidx.constraintlayout.widget.ConstraintLayout>